@@ -7,14 +7,18 @@
   <target name="test1">
     <jar file="mftest1.jar" manifest="manifests/test1.mf"/>
     <unjar src="mftest1.jar" dest="manifests">
-      <include name="META-INF/MANIFEST.MF"/>
+      <patternset>
+        <include name="META-INF/MANIFEST.MF"/>
+      </patternset>
     </unjar>
   </target>
   
   <target name="test2">
     <jar file="mftest2.jar" manifest="manifests/test2.mf"/>
     <unjar src="mftest2.jar" dest="manifests">
-      <include name="META-INF/MANIFEST.MF"/>
+      <patternset>
+        <include name="META-INF/MANIFEST.MF"/>
+      </patternset>
     </unjar>
   </target>
   
@@ -48,7 +52,9 @@
       </manifest>
     </jar>
     <unjar src="mftest8.jar" dest="manifests">
-      <include name="META-INF/MANIFEST.MF"/>
+      <patternset>
+        <include name="META-INF/MANIFEST.MF"/>
+      </patternset>
     </unjar>
   </target>
 
@@ -108,7 +114,9 @@
       </manifest>
     </jar>
     <unjar src="mftest14.jar" dest="manifests">
-      <include name="META-INF/MANIFEST.MF"/>
+      <patternset>
+        <include name="META-INF/MANIFEST.MF"/>
+      </patternset>
     </unjar>
   </target>
 
@@ -124,7 +132,9 @@
       </manifest>
     </jar>
     <unjar src="mftestLongLine.jar" dest="manifests">
-      <include name="META-INF/MANIFEST.MF"/>
+      <patternset>
+        <include name="META-INF/MANIFEST.MF"/>
+      </patternset>
     </unjar>
   </target>
 
@@ -141,7 +151,9 @@
       </manifest>
     </jar>
     <unjar src="mftestOrder1.jar" dest="manifests">
-      <include name="META-INF/MANIFEST.MF"/>
+      <patternset>
+        <include name="META-INF/MANIFEST.MF"/>
+      </patternset>
     </unjar>
   </target>
 
@@ -158,7 +170,9 @@
       </manifest>
     </jar>
     <unjar src="mftestOrder2.jar" dest="manifests">
-      <include name="META-INF/MANIFEST.MF"/>
+      <patternset>
+        <include name="META-INF/MANIFEST.MF"/>
+      </patternset>
     </unjar>
   </target>
 
